--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - tic-tac-five-network
     depends_on:
       - tic-tac-five-backend
+    environment:
+      - REACT_APP_API_URL=http://${BASE_IP}:8080
 
   tic-tac-five-backend:
     image: tic-tac-five-backend
@@ -18,6 +20,8 @@ services:
       - tic-tac-five-network
     depends_on:
       - mongodb_container
+    environment:
+      - FRONTEND_URL=http://${BASE_IP}:3000
 
   mongodb_container:
     image: mongo:latest
